# Operations_Library

./: .clang-format  CMakeLists.txt  operations.cpp
include/: operations.hpp
src/: operations.cpp
